--- a/css/history.less
+++ b/css/history.less
@@ -5,12 +5,13 @@
     float: left;
     display: block;
     margin-right: 10px;
-    border: 1px solid #ccc;
+    border: 2px solid #000;
     cursor: pointer;
   }
   
   .order-list {
     clear:both;
+    border: 2px solid #000;
 
     .order-item {
       cursor: pointer;
@@ -51,7 +52,32 @@
     clear: both;
     width: 100%;
     height: 500px;
-    border: 1px solid #ccc;
+    border: 2px solid #000;
+    .table{
+      .food-pop{
+        .popfood{
+          float: left;
+          width: 150px;
+          margin-right: 5px;
+        }
+        .food-img {
+        width: 120px;
+        height: 120px;
+        border-radius: 50px;
+        margin-right: 20px;
+        }
+
+        .food-tip {
+          //display: block;
+          clear: both;
+
+          span {
+          //display: block;
+          text-align:center;
+          }
+        }
+      }
+    }
   }
   
 }
