--- a/css/input.less
+++ b/css/input.less
@@ -1,12 +1,26 @@
+
+.container{
+  //float:left;
+  //margin-left:
+
+
+}
 form {
   clear: both;
-  width: 808px;
+  width: 320px;
   position: relative;
   display: block;
-  margin-left: 98px;
+  //margin-left: 98px;
+  margin-left:330px;
   margin-top: 22px;
+  border:2px solid #000;
 }
-
+.content{
+  margin-left:20px;
+  width:280px;
+  margin-top:15px;
+  margin-bottom:15px;
+}
 .input_height {
   height: 30px;
   margin-bottom: 15px;
@@ -19,4 +33,7 @@ form {
 .long_width {
   width: 280px;
 }
-
+#btn{
+  margin:0 auto;
+  width:100px;
+}
