--- a/css/style.less
+++ b/css/style.less
@@ -13,10 +13,9 @@ html {
 
     .pane {
       width: 800px;
-      height: 550px;
+      minm-height: 550px;
       display: inline-block;
       float: left;
-      .b;
     }
 
     .button {
@@ -27,18 +26,239 @@ html {
     }
   }
   
-  
+  #welcome, #makeorder, #success{
+    .content {
+      position: relative;
+      width: 960px;
+      min-height: 500px;
+      margin: 0 auto;
+      overflow: hidden;
+      
+      nav{
+        width: 300px;
+        height: 60px;
+        position: absolute;
+        left: 50%;
+        margin-left: -150px;
+        position: relative;
+        background: url(../images/step1.png) no-repeat;
+      }
+    }
+  }
 
-  #welcome {
-    
+  #welcome{
+    position: relative;
+
+    .content {
+
+      .eatinfo {
+        width: 350px;
+        height: 250px;
+        position: absolute;
+        left: 100px;
+        top: 140px;
+
+        input {
+          position: absolute;
+          border: 0;
+          font-weight: bold;
+        }
+
+        .info {
+          width: 290px;
+          height: 190px;
+          background: url(../images/info.png) no-repeat;
+
+          .person-num, .time {
+            padding: 5px;
+            height: 25px;
+            right: 75px; 
+            top: 80px;
+            background: url(../images/people_text.png) no-repeat;
+          }
+
+          .time {
+            top:125px;
+            background: url(../images/time_text.png) no-repeat;
+          }
+        }
+
+        .btn {
+          position: absolute;
+          width: 200px;
+          height: 50px;
+          left: 50%;
+          margin-left: -150px;
+
+          .step1 {
+            width: 88px;
+            height: 38px;
+            margin-left: 100px;
+            cursor: pointer;
+            background: url(../images/next.png) no-repeat;
+          }
+
+          .reset {
+            width: 88px;
+            height: 38px;
+            cursor: pointer;
+            background: url(../images/reset.png) no-repeat;
+          }
+        }
+      }
+      .person {
+        position: absolute;
+        right: 200px;
+        bottom: 0;
+        width: 94px;
+        height: 134px;
+        background: url("../images/person.png") no-repeat;
+      }
+    }
   }
   
   #makeorder {
+    .content {
+      height: 630px;
 
+      nav {
+        background: url(../images/step2.png) no-repeat;
+      }
+
+      .order-detail {
+        width: 100%;
+
+        .autosend {
+          width: 215px;
+          height: 135px;
+          float: left;
+          cursor: pointer;
+
+          .person{
+            float: left;
+            width: 94px;
+            height: 135px;
+            background: url(../images/a_guy_03.png) no-repeat;
+          }
+          .car{
+            width: 121px;
+            height: 105px;
+            margin-left: 94px;
+            background: url(../images/recommend_pre_03.png) no-repeat;
+          }
+        }
+
+        .order-list {
+          float: left;
+          width: 500px;
+          height: 420px;
+          margin-left: 10px;
+          overflow: auto;
+          .b;
+
+          li {
+            width: 150px;
+            height: 70px;
+            float: left;
+            .b;
+            margin: 3px;
+            cursor: pointer;
+          }
+        }
+
+        .myorder {
+          float: right;
+          width: 190px;
+          height: 480px;
+
+          .title {
+            width: 100%;
+            height: 30px;
+            font-family: '迷你简丫丫',sans-serif;
+            font-weight: bold;
+            font-size: 30px;
+          }
+
+          ul{
+            width: 100%;
+            overflow: auto;
+
+            li {
+              width: 100%;
+              height: 33px;
+              margin: 5px 0;
+
+              .order-name{
+                width: 165px;
+                height: 33px;
+                float: left;
+                background: url(../images/menu_buttun_08.png) no-repeat
+              }
+
+              .delete {
+                float: left;
+                width: 21px;
+                display: table-cell;
+                vertical-align: middle;
+                height: 19px;
+                margin-left: 2px;
+                cursor: pointer;
+                background: url(../images/delete_03.png) no-repeat;
+              } 
+            }
+          }
+
+          .people {
+            width: 140px;
+            height: 96px;
+            background: url(../images/smallface_22.png) no-repeat;
+            margin: 0;
+          }
+          .tip {
+            margin-top: 10px;
+          }
+        }
+      }
+    }
+
+    .btn {
+      position: absolute;
+      clear: both;
+      width: 100%;
+      height: 35px;
+      bottom: 40px;
+      
+      input {
+        width: 78px;
+        height: 35px;
+        cursor: pointer;
+      }
+
+      .return {
+        position: absolute;
+        left: 0;
+        background: url(../images/return_pre_11.png) no-repeat;
+      }
+
+      .reset {
+        position: absolute;
+        right: 200px;
+        background: url(../images/reset_pre_25.png) no-repeat;
+      }
+      .sub {
+        position: absolute;
+        right: 100px;
+        background: url(../images/send_03.png) no-repeat;
+      }
+    }
   }
 
   #success {
-
+    .content {
+      nav {
+        background: url(../images/step1.png) no-repeat;
+      }
+    }
   }
 }
 
