finish eatgoods version0.1

--- a/css/style.less
+++ b/css/style.less
@@ -6,14 +6,23 @@ html {
 
 .container {
   position: absolute;
-  margin: 30px 10px;
+  margin: 15px 10px;
+
+   nav{
+    position: fixed;
+    width: 300px;
+    height: 60px;
+    left: 50%;
+    margin-left: -150px;
+    background: url(../images/step1.png) no-repeat;
+  }
 
   #wrap {
     width: 6000px;
 
     .pane {
       width: 800px;
-      minm-height: 550px;
+      min-height: 550px;
       display: inline-block;
       float: left;
     }
@@ -29,20 +38,10 @@ html {
   #welcome, #makeorder, #success{
     .content {
       position: relative;
-      width: 960px;
+      width: 990px;
       min-height: 500px;
       margin: 0 auto;
       overflow: hidden;
-      
-      nav{
-        width: 300px;
-        height: 60px;
-        position: absolute;
-        left: 50%;
-        margin-left: -150px;
-        position: relative;
-        background: url(../images/step1.png) no-repeat;
-      }
     }
   }
 
@@ -65,20 +64,25 @@ html {
         }
 
         .info {
-          width: 290px;
-          height: 190px;
-          background: url(../images/info.png) no-repeat;
-
+          width: 301px;
+          height: 258px;
+          background: url(../images/info.gif) no-repeat;
+          
           .person-num, .time {
+            width: 112px;
             padding: 5px;
             height: 25px;
-            right: 75px; 
+            right: 105px; 
             top: 80px;
+            
+            right: 95px;
+            top:85px;
+
             background: url(../images/people_text.png) no-repeat;
           }
 
           .time {
-            top:125px;
+            top:135px;
             background: url(../images/time_text.png) no-repeat;
           }
         }
@@ -87,13 +91,14 @@ html {
           position: absolute;
           width: 200px;
           height: 50px;
-          left: 50%;
-          margin-left: -150px;
+          left: 49px;
+          top:194px;
+          opacity: 0;
 
           .step1 {
             width: 88px;
             height: 38px;
-            margin-left: 100px;
+            margin-left: 113px;
             cursor: pointer;
             background: url(../images/next.png) no-repeat;
           }
@@ -105,7 +110,30 @@ html {
             background: url(../images/reset.png) no-repeat;
           }
         }
+
+        .history-link {
+          display: block;
+          width: 130px;
+          height: 20px;
+          color: #000;
+          margin-left: 20px;
+        }
       }
+
+      .restaurant {
+        position: absolute;
+        left: 100px;
+        height: 35px;
+        min-width: 300px;
+        overflow: hidden;
+
+        select, input {
+          height: 30px;
+          border: 1px solid;
+          margin-right: 10px;
+        }
+      }
+
       .person {
         position: absolute;
         right: 200px;
@@ -118,12 +146,11 @@ html {
   }
   
   #makeorder {
+    margin-top: 80px;
+    position: relative;
+
     .content {
       height: 630px;
-
-      nav {
-        background: url(../images/step2.png) no-repeat;
-      }
 
       .order-detail {
         width: 100%;
@@ -136,39 +163,73 @@ html {
 
           .person{
             float: left;
-            width: 94px;
-            height: 135px;
-            background: url(../images/a_guy_03.png) no-repeat;
+            // width: 94px;
+            // height: 135px;
+            // background: url(../images/a_guy_03.png) no-repeat;
+
+            width: 100px*0.8;
+            height: 150px*0.8;
+            background: url(../images/a_guy_03.gif) no-repeat;
+            background-size: 100% 100%;
           }
           .car{
             width: 121px;
             height: 105px;
-            margin-left: 94px;
+            margin-left: 80px;
+            margin-top: 10px;
             background: url(../images/recommend_pre_03.png) no-repeat;
+            background-size: 100% 100%;
           }
         }
 
         .order-list {
           float: left;
-          width: 500px;
-          height: 420px;
-          margin-left: 10px;
-          overflow: auto;
-          .b;
+          width: 525px;
+          height: 415px;
+          margin-left: 20px;
 
-          li {
-            width: 150px;
-            height: 70px;
+          h3 {
+            font-family: '迷你简丫丫',sans-serif;
+            font-size: 30px;
+          }
+
+          .dahun, .hun, .su {
+            height: 140px;
+            overflow: auto;
+          }
+
+          li ,#slideitem{
+            width: 164px;
+            height:35px;
+            background: url(../images/xiaokuang.png) no-repeat;
             float: left;
-            .b;
-            margin: 3px;
+            margin: 0 1px;
             cursor: pointer;
+            font-family: '迷你简丫丫',sans-serif;
+            //font-size: 18px;
+            font-size: 15px;
+            line-height: 35px;
+            font-weight: bold;
+            color: #000;
+
+            .order-name{
+              margin-left: 10px;
+              float: left;
+              padding-left: 15px;
+              background: url(../images/color/green.png) no-repeat;
+              background-position: 0 50%;
+            }
+            .order-price {
+              font-size: 14px;
+              float: right;
+              margin-right: 2px;
+            }
           }
         }
 
         .myorder {
           float: right;
-          width: 190px;
+          width: 220px;
           height: 480px;
 
           .title {
@@ -181,28 +242,45 @@ html {
 
           ul{
             width: 100%;
+            height: 241px;
             overflow: auto;
 
             li {
               width: 100%;
               height: 33px;
-              margin: 5px 0;
+              line-height: 33px;
+              margin: 2px 0;
+              background: url(../images/menu_buttun_08.png) no-repeat;
+              font-family: '迷你简丫丫',sans-serif;
+              font-size: 18px;
+              color: #fff;
 
-              .order-name{
-                width: 165px;
+              .order-name {
+                width: 110px;
                 height: 33px;
                 float: left;
-                background: url(../images/menu_buttun_08.png) no-repeat
+                padding-left: 15px;
+                margin-left: 8px;
+                background: url(../images/color/green.png) no-repeat;
+                background-position: 0 50%;
+                overflow: hidden;
+              }
+          
+              .order-price {
+                float: left;
+                font-size: 14px;
+                margin-right: 5px;
               }
 
               .delete {
+                display: none;
                 float: left;
                 width: 21px;
-                display: table-cell;
                 vertical-align: middle;
                 height: 19px;
-                margin-left: 2px;
                 cursor: pointer;
+                margin-left: 0px;
+                margin-top: 5px;
                 background: url(../images/delete_03.png) no-repeat;
               } 
             }
@@ -211,11 +289,18 @@ html {
           .people {
             width: 140px;
             height: 96px;
-            background: url(../images/smallface_22.png) no-repeat;
-            margin: 0;
+            background: url(../images/emotion/kiss.png) no-repeat;
+            background-size: 100% 100%;
+            margin: 5px auto;
           }
           .tip {
             margin-top: 10px;
+            text-align: center;
+          }
+
+          .stress {
+            font-size: 36px;
+            font-weight: bold;
           }
         }
       }
@@ -226,7 +311,7 @@ html {
       clear: both;
       width: 100%;
       height: 35px;
-      bottom: 40px;
+      bottom: 105px;
       
       input {
         width: 78px;
@@ -236,28 +321,54 @@ html {
 
       .return {
         position: absolute;
-        left: 0;
+        left: 122px;
         background: url(../images/return_pre_11.png) no-repeat;
       }
 
       .reset {
         position: absolute;
-        right: 200px;
+        right: 140px;
         background: url(../images/reset_pre_25.png) no-repeat;
       }
       .sub {
         position: absolute;
-        right: 100px;
+        right: 53px;
         background: url(../images/send_03.png) no-repeat;
+      }
+      .nodish{
+        display: none;
+        width: 50px;
+        height: 26px;
+        background: url(../images/genius_07.png) no-repeat;
+        position: absolute;
+        padding-left: 25px;
+        right: 20px;
+        top: -30px;
       }
     }
   }
 
   #success {
     .content {
-      nav {
-        background: url(../images/step1.png) no-repeat;
+      .success-msg{
+        top: 166px;
+        width: 300px;
+        height: 196px;
+        background: url(../images/success.gif) no-repeat;
+        left: 50%;
+        margin-left: -168px;
+        position: absolute;
+
+        .step4 {
+          width: 100px;
+          border: 0;
+          position: absolute;
+          bottom: 20px;
+          left: 50%;
+          margin-left: -30px;
+        }
       }
+
     }
   }
 }
